k8s/removed/evcc/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      # use initContainer to make config.yml rw (editable in browser)
      # initContainers:
      #   - name: copyconfig
      #     image: busybox
      #     command:
      #       - "sh"
      #       - "-c"
      #       - |
      #         cp /sourceconf/evcc.yaml /etc/evcc.yaml
      #     volumeMounts:
      #       - name: config-map
      #         mountPath: /sourceconf/
      #       - name: config
      #         mountPath: /etc/
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 7070
          volumeMounts:
            - name: config-map
              mountPath: "/etc/evcc.yaml"
              subPath: evcc.yaml
            - name: persistance
              mountPath: /.evcc/
              subPath: evcc/
      volumes:
        - name: config-map
          configMap:
            name: evcc-config
        - name: config
          emptyDir: {}
