k8s/removed/evcc/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - evcc.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: evcc.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evcc-service
                port:
                  name: http
